--- a/my-nx-workspace/apps/fire-base-animation/src/app/components/multi-state/multi-state.component.html
+++ b/my-nx-workspace/apps/fire-base-animation/src/app/components/multi-state/multi-state.component.html
@@ -1,3 +1,8 @@
-<p>
-  multi-state works!
-</p>
+<div>
+    <img [@photoState]="position" alt="kitten" class="photo" src="https://placekitten.com/301/301" />
+
+    <button (click)="changePosition('move')" class="button">Translate</button>
+    <button (click)="changePosition('spin')" class="button">Rotate</button>
+    <button (click)="changePosition('enlarge')" class="button">Scale</button>
+    <button (click)="changePosition(null)" class="button">Reset</button>
+</div>
