:tractor: :sparkles: :lipstick: finalized comps, issue #4

--- a/my-nx-workspace/apps/fire-base-animation/src/app/components/index/index.component.html
+++ b/my-nx-workspace/apps/fire-base-animation/src/app/components/index/index.component.html
@@ -1,3 +1,5 @@
+<h1>AngularFirebase.com: Animations [Jul 24, 2017]</h1>
+
 <ul>
     <li>
         <a [routerLink]="['/multi-state']">AngularFirebase: multi-state animation</a>
@@ -5,4 +7,15 @@
     <li>
         <a [routerLink]="['/pop-over']">AngularFirebase: pop-over animation</a>
     </li>
+    <li>
+        <a [routerLink]="['/keyframes']">AngularFirebase: keyframes animation</a>
+    </li>
+    <li>
+        <a [routerLink]="['/callbacks']">AngularFirebase: callbacks animation</a>
+    </li>
+    <li>
+        <a [routerLink]="['/lists']">AngularFirebase: lists animation</a>
+    </li>
 </ul>
+
+<p><a href="https://angularfirebase.com/lessons/animation-examples-in-angular-4-3/">[source]</a></p>
