--- a/my-nx-workspace/apps/fire-base-animation/src/app/components/multi-state/multi-state.component.html
+++ b/my-nx-workspace/apps/fire-base-animation/src/app/components/multi-state/multi-state.component.html
@@ -1,3 +1,4 @@
+<my-nx-workspace-menu></my-nx-workspace-menu>
 <div>
     <img [@photoState]="position" alt="kitten" class="photo" src="https://placekitten.com/301/301" />
 
