--- a/my-nx-workspace/apps/fire-base-animation/src/app/components/pop-over/pop-over.component.html
+++ b/my-nx-workspace/apps/fire-base-animation/src/app/components/pop-over/pop-over.component.html
@@ -1,3 +1,4 @@
+<my-nx-workspace-menu></my-nx-workspace-menu>
 <div [@popOverState]="stateName">
         <p>Hello! I'm a helpful message.</p>
 </div>
