:tractor: :pencil: :lipstick: added lists sample, resolves #4

--- a/my-nx-workspace/apps/fire-base-animation/src/app/components/lists/lists.component.html
+++ b/my-nx-workspace/apps/fire-base-animation/src/app/components/lists/lists.component.html
@@ -1,4 +1,6 @@
 <my-nx-workspace-menu></my-nx-workspace-menu>
-<p>
-    lists works!
-</p>
+<div [@photosAnimation]="photos.length">
+    <div *ngFor="let photo of photos">
+        <img [src]="photo">
+    </div>
+</div>
