:tractor: :sparkles: added use-animation, issue #6

--- a/my-nx-workspace/apps/year-of-moo-animation/src/app/components/index/index.component.html
+++ b/my-nx-workspace/apps/year-of-moo-animation/src/app/components/index/index.component.html
@@ -1,3 +1,12 @@
-<p>
-  index works!
-</p>
+<h1>YearOfMoo.com: Animations [Jun 6, 2017]</h1>
+
+<ul>
+    <li>
+        <a [routerLink]="['/use-animation']">YearOfMoo: use-animation animation</a>
+    </li>
+    <li>
+        <a [routerLink]="['/animation-builder']">YearOfMoo: animation-builder animation</a>
+    </li>
+</ul>
+
+<p><a href="https://www.yearofmoo.com/2017/06/new-wave-of-animation-features.html#animation-options-input-params">[source]</a></p>
