:tractor: :lipstick: added animation-builder sample, resolves #6

--- a/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
+++ b/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
@@ -1,4 +1,7 @@
 <my-nx-workspace-menu></my-nx-workspace-menu>
-<p>
-    animation-builder works!
-</p>
+<div #photos>
+    <img alt="kitten" class="photo" src="https://placekitten.com/65/65" />
+    <img alt="kitten" class="photo" src="https://placekitten.com/129/129" />
+    <img alt="kitten" class="photo" src="https://placekitten.com/146/146" />
+    <button (click)="animate()">Animate</button>
+</div>
