:fire: :fire: :fire: cannot reuse animations, issue #6

--- a/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
+++ b/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
@@ -3,5 +3,6 @@
     <img alt="kitten" class="photo" src="https://placekitten.com/65/65" />
     <img alt="kitten" class="photo" src="https://placekitten.com/129/129" />
     <img alt="kitten" class="photo" src="https://placekitten.com/146/146" />
-    <button (click)="animate()">Animate</button>
+    <button (click)="slideBack()">Slide Back</button>
+    <button (click)="slideForward()">Slide Forward</button>
 </div>
