:hammer: :pencil: builder animations working on Chrome and Edge, issue #6

--- a/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
+++ b/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
@@ -1,4 +1,12 @@
 <my-nx-workspace-menu></my-nx-workspace-menu>
+
+<div>
+    <div #simpleBlock class="animated block">
+    </div>
+    <button (click)="slideDivBack()">Slide Back</button>
+    <button (click)="slideDivForward()">Slide Forward</button>
+</div>
+
 <div #photos>
     <img alt="kitten" class="photo" src="https://placekitten.com/65/65" />
     <img alt="kitten" class="photo" src="https://placekitten.com/129/129" />
