--- a/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.scss
+++ b/my-nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.scss
@@ -1,3 +1,9 @@
+.animated.block {
+    background-color: red;
+    height: 5rem;
+    margin: 1rem auto;
+    width: 5rem;
+}
 div {
     text-align: center;
 
