--- a/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
+++ b/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
@@ -3,14 +3,14 @@
         <h2>strip of fixed blocks</h2>
     </div>
     <div class="col-md-2 col-xs-4 controls">
-        <button type="button" class="btn btn-link command left">
+        <button (click)="slideBlocks('left')" type="button" class="btn btn-link command left">
             ◄
         </button>
-        <button type="button" class="btn btn-link command right">
+        <button (click)="slideBlocks('right')" type="button" class="btn btn-link command right">
             ►
         </button>
     </div>
 </div>
-<div class="block-container wrapper">
+<div #thumbsContainer class="block-container wrapper">
     <div><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span></div>
 </div>
