:hammer: :hammer: comments back in slideBlocks(), issue #9

--- a/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
+++ b/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
@@ -1,8 +1,6 @@
 <div class="block-container header">
-    <div class="col-md-10 col-xs-8">
-        <h2>strip of fixed blocks</h2>
-    </div>
-    <div class="col-md-2 col-xs-4 controls">
+    <h1>strip of fixed blocks</h1>
+    <div class="controls">
         <button (click)="slideBlocks('left')" type="button" class="btn btn-link command left">
             ◄
         </button>
