--- a/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.scss
+++ b/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.scss
@@ -1,33 +1,40 @@
-.block-container {
+.block-container.header {
+    & > h1,
+    & > .controls {
+        display: inline-block;
+        padding-left: 2em;
+
+        & > .command {
+            cursor: pointer;
+            font-size: 2.4em;
+            margin: 0.5em;
+        }
+    }
+}
+
+.block-container.wrapper {
     background-color: #add8e6;
     height: 98px; /* 4 + 90 + 4 = 98 */
     margin: 0 auto;
     max-width: 992px; /* (4 + 120 ) * 8 = 992 */
     overflow: hidden;
-    white-space: nowrap;
-}
-
-.command {
-    font-size: 2.4em;
-}
-
-.block-container.wrapper {
     position: relative;
-}
+    white-space: nowrap;
 
-.block-container.wrapper > div {
-    position: absolute;
-}
+    & > div {
+        position: absolute;
+    }
 
-.block-container.wrapper > div > span {
-    background-color: #ff0000;
-    display: inline-block;
-    font-size: 2.4em;
-    margin: 0;
-    margin-right: 4px;
-    height: 90px;
-    vertical-align: text-bottom;
-    width: 120px;
+    & > div > span {
+        background-color: #ff0000;
+        display: inline-block;
+        font-size: 2.4em;
+        margin: 0;
+        margin-right: 4px;
+        height: 90px;
+        vertical-align: text-bottom;
+        width: 120px;
+    }
 }
 
 /*
@@ -41,31 +48,36 @@
     (4 + 120 ) * 3 = 372
 */
 
-@media (max-width: 1040px) { /* measured by hand: 1040 */
+@media (max-width: 1040px) {
+    /* measured by hand: 1040 */
     .block-container.wrapper {
         width: 868px;
     }
 }
 
-@media (max-width: 891px) { /* (1040/868) * 744 = 891 */
+@media (max-width: 891px) {
+    /* (1040/868) * 744 = 891 */
     .block-container.wrapper {
         width: 744px;
     }
 }
 
-@media (max-width: 743px) { /* (1040/868) * 620 = 743 */
+@media (max-width: 743px) {
+    /* (1040/868) * 620 = 743 */
     .block-container.wrapper {
         width: 620px;
     }
 }
 
-@media (max-width: 654px) { /* (1040/868) * 420 = 594 */
+@media (max-width: 654px) {
+    /* (1040/868) * 420 = 594 */
     .block-container.wrapper {
         width: 496px;
     }
 }
 
-@media (max-width: 446px) { /* (1040/868) * 372 = 446 */
+@media (max-width: 446px) {
+    /* (1040/868) * 372 = 446 */
     .block-container.wrapper {
         width: 372px;
     }
