--- a/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
+++ b/my-nx-workspace/apps/responsive-thumbnails/src/app/components/thumbs-container/thumbs-container.component.html
@@ -1,10 +1,10 @@
 <div class="block-container header">
     <h1>strip of fixed blocks</h1>
     <div class="controls">
-        <button (click)="slideBlocks('left')" type="button" class="btn btn-link command left">
+        <button (click)="slideBlocks('forward')" type="button" class="btn btn-link command left">
             ◄
         </button>
-        <button (click)="slideBlocks('right')" type="button" class="btn btn-link command right">
+        <button (click)="slideBlocks('back')" type="button" class="btn btn-link command right">
             ►
         </button>
     </div>
