--- a/nx-workspace/apps/fire-base-animation/src/app/components/keyframes/keyframes.component.html
+++ b/nx-workspace/apps/fire-base-animation/src/app/components/keyframes/keyframes.component.html
@@ -1,4 +1,4 @@
-<my-nx-workspace-menu></my-nx-workspace-menu>
+<nx-workspace-menu></nx-workspace-menu>
 <div>
     <img [@photoState]="position" alt="kitten" class="photo" src="https://placekitten.com/301/301" />
 
