--- a/nx-workspace/apps/fire-base-animation/src/app/components/lists/lists.component.html
+++ b/nx-workspace/apps/fire-base-animation/src/app/components/lists/lists.component.html
@@ -1,4 +1,4 @@
-<my-nx-workspace-menu></my-nx-workspace-menu>
+<nx-workspace-menu></nx-workspace-menu>
 <div [@photosAnimation]="photos.length">
     <div *ngFor="let photo of photos">
         <img [src]="photo">
