--- a/nx-workspace/apps/fire-base-animation/src/app/components/pop-over/pop-over.component.html
+++ b/nx-workspace/apps/fire-base-animation/src/app/components/pop-over/pop-over.component.html
@@ -1,4 +1,4 @@
-<my-nx-workspace-menu></my-nx-workspace-menu>
+<nx-workspace-menu></nx-workspace-menu>
 <div [@popOverState]="stateName">
         <p>Hello! I'm a helpful message.</p>
 </div>
