--- a/nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
+++ b/nx-workspace/apps/year-of-moo-animation/src/app/components/animation-builder/animation-builder.component.html
@@ -1,4 +1,4 @@
-<my-nx-workspace-menu></my-nx-workspace-menu>
+<nx-workspace-menu></nx-workspace-menu>
 
 <div>
     <div #simpleBlock class="animated block">
