--- a/nx-workspace/apps/year-of-moo-animation/src/app/components/use-animation/use-animation.component.html
+++ b/nx-workspace/apps/year-of-moo-animation/src/app/components/use-animation/use-animation.component.html
@@ -1,4 +1,4 @@
-<my-nx-workspace-menu></my-nx-workspace-menu>
+<nx-workspace-menu></nx-workspace-menu>
 <div [@popOverState]="stateName">
         <p>Hello! I'm a helpful message.</p>
 </div>
