--- a/nx-workspace/apps/component-testing/src/app/components/simple-input/simple-input.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/simple-input/simple-input.component.html
@@ -1,3 +1,10 @@
+<div class="abc-checkbox abc-checkbox-danger">
+  <input type="checkbox" id="simpleInput" [ngModel]="value" />
+  <label for="simpleInput">Set value</label>
+</div>
 <p>
-  simple-input works!
+  📃“<a
+    href="https://medium.com/@juliapassynkova/unit-testing-of-simple-input-box-fdbba93f3d2e"
+    >Unit testing of simple input box</a
+  >” by Julia Passynkova
 </p>
