:lipstick: :books: menus, routing, docs

--- a/nx-workspace/apps/component-testing/src/app/components/detect-changes/detect-changes.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/detect-changes/detect-changes.component.html
@@ -1,3 +1,7 @@
-<p>
-  detect-changes works!
-</p>
+<nx-workspace-menu></nx-workspace-menu>
+<p>👀Look at the Karma-Jasmine spec associated with this component.</p>
+<h2>additional resources:</h2>
+<ul>
+  <li><a href="https://angular.io/guide/testing#detectchanges">Angular Guide: <code>detectChanges()</code></a></li>
+  <li><a href="https://blog.angularindepth.com/everything-you-need-to-know-about-change-detection-in-angular-8006c51d206f">“Everything you need to know about change detection in Angular”</a> by Max Koretskyi [2017]</li>
+</ul>
