--- a/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
@@ -1,6 +1,8 @@
 <h1>Component Testing with Karma-Jasmine</h1>
-
 <ul>
+  <li>
+    <a [routerLink]="['/detect-changes']">Angular Guide: <code>detectChanges()</code>”</a>
+  </li>
   <li>
     <a [routerLink]="['/simple-input']">Julia Passynkova: “Unit testing of simple input box”</a>
   </li>
