--- a/nx-workspace/apps/component-testing/src/app/components/simple-input/simple-input.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/simple-input/simple-input.component.html
@@ -1,10 +1,15 @@
+<nx-workspace-menu></nx-workspace-menu>
+<p>👀Look at the Karma-Jasmine spec associated with this component.</p>
 <div class="abc-checkbox abc-checkbox-danger">
   <input type="checkbox" id="simpleInput" [ngModel]="value" />
   <label for="simpleInput">Set value</label>
 </div>
-<p>
-  📃“<a
-    href="https://medium.com/@juliapassynkova/unit-testing-of-simple-input-box-fdbba93f3d2e"
-    >Unit testing of simple input box</a
-  >” by Julia Passynkova
-</p>
+<h2>additional resources:</h2>
+<ul>
+  <li>
+    📃“<a
+      href="https://medium.com/@juliapassynkova/unit-testing-of-simple-input-box-fdbba93f3d2e"
+      >Unit testing of simple input box</a
+    >” by Julia Passynkova
+  </li>
+</ul>
