:tractor: :sparkles: added reactive-forms sample

--- a/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
@@ -1,6 +1,9 @@
 <h1>Component Testing with Karma-Jasmine</h1>
 <ul>
   <li>
+    <a [routerLink]="['/reactive-forms']">Angular Firebase: Reactive Forms Fundamentals</a>
+  </li>
+  <li>
     <a [routerLink]="['/detect-changes']">Angular Guide: <code>detectChanges()</code>”</a>
   </li>
   <li>
