--- a/nx-workspace/apps/component-testing/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/reactive-forms/reactive-forms.component.html
@@ -40,9 +40,7 @@
   <button type="submit" [disabled]="myForm.invalid">Let's Do it!</button>
 </form>
 
-<div *ngIf="success">
-    Yay! We received your submission
-</div>
+<div *ngIf="success">Yay! We received your submission</div>
 
 <h2>additional resources:</h2>
 <ul>
@@ -51,5 +49,12 @@
       href="https://angularfirebase.com/lessons/basics-reactive-forms-in-angular/"
       >Angular Reactive Forms Basics Guide</a
     >” by Jeff Delaney
+  </li>
+  <li>
+    📃“<a
+      href="https://blog.realworldfullstack.io/real-world-angular-part-9-2-even-more-unit-tests-f903df40530a"
+      >Real World Angular–Part 9.2: Even More Unit Tests [Testing Reactive
+      Forms]</a
+    >” by Akshay Nihalaney
   </li>
 </ul>
