--- a/nx-workspace/apps/component-testing/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/reactive-forms/reactive-forms.component.html
@@ -50,6 +50,7 @@
       >Angular Reactive Forms Basics Guide</a
     >” by Jeff Delaney
   </li>
+  <li>📃<a href="https://angular.io/guide/reactive-forms">Angular Guide: Reactive Forms</a></li>
   <li>
     📃“<a
       href="https://blog.realworldfullstack.io/real-world-angular-part-9-2-even-more-unit-tests-f903df40530a"
