:tractor: :books: added template forms sample

--- a/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/index/index.component.html
@@ -4,6 +4,9 @@
     <a [routerLink]="['/reactive-forms']">Angular Firebase: Reactive Forms Fundamentals</a>
   </li>
   <li>
+    <a [routerLink]="['/template-forms']">Template Forms Fundamentals</a>
+  </li>
+  <li>
     <a [routerLink]="['/detect-changes']">Angular Guide: <code>detectChanges()</code>”</a>
   </li>
   <li>
