--- a/nx-workspace/apps/component-testing/src/app/components/template-forms/template-forms.component.html
+++ b/nx-workspace/apps/component-testing/src/app/components/template-forms/template-forms.component.html
@@ -20,13 +20,22 @@
   <button type="button" (click)="addPhone()">Add Phone Number</button>
 
   <h4>Password</h4>
-  <input required type="password" name="password" #password="ngModel" [(ngModel)]="myFormData.password" />
+  <input required pattern="passwordPattern" type="password" name="password" #password="ngModel" [(ngModel)]="myFormData.password" />
   <span class="error" *ngIf="password.invalid && password.touched">
     That password sucks...
   </span>
 
   <h4>Age</h4>
-  <input required type="password" name="age" [(ngModel)]="myFormData.age" />
+  <input class="small" required nx-workspace-min="18" max="65" type="number" name="age" #age="ngModel" [(ngModel)]="myFormData.age" />
+  <span class="error" *ngIf="age.invalid && age.touched">
+    Do enter a number!
+  </span>
+  <span class="error" *ngIf="age.errors?.min && age.touched">
+    {{ myFormData.age }} is too young to use this app kiddo!
+  </span>
+  <span class="error" *ngIf="age.errors?.max && age.touched">
+    {{ myFormData.age }} is too old to use this app gramps!
+  </span>
 
   <button type="submit">Let's Do it!</button>
 </form>
