--- a/nx-workspace/apps/seo-splash/src/styles.scss
+++ b/nx-workspace/apps/seo-splash/src/styles.scss
@@ -1,53 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
 
 main {
-  margin: 1em auto;
-  max-width: 60%;
-  padding: 0.5em;
-  & > div {
-    padding: 1em;
-  }
+    margin: 1em auto;
+    max-width: 60%;
+    padding: 0.5em;
+    & > div {
+        padding: 1em;
+    }
+    transition: all 2s linear;
 }
 
 footer {
-  margin: 1em auto;
-  max-width: 60%;
-  .copyright {
-    display: block;
-    text-align: center;
-  }
+    margin: 1em auto;
+    max-width: 60%;
+    .copyright {
+        display: block;
+        text-align: center;
+    }
+}
+
+.collapsed {
+  display: none;
+}
+
+.hidden {
+  opacity: 0;
 }
 
 /* https://loading.io/css/ */
 .lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 64px;
-  height: 64px;
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
 }
 .lds-ripple div {
-  position: absolute;
-  border: 4px solid #fcf;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    position: absolute;
+    border: 4px solid #fcf;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 .lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
+    animation-delay: -0.5s;
 }
 @keyframes lds-ripple {
-  0% {
-    top: 28px;
-    left: 28px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: -1px;
-    left: -1px;
-    width: 58px;
-    height: 58px;
-    opacity: 0;
-  }
+    0% {
+        top: 28px;
+        left: 28px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        top: -1px;
+        left: -1px;
+        width: 58px;
+        height: 58px;
+        opacity: 0;
+    }
 }
